@@ -9,7 +9,6 @@ import java.awt.print.PrinterJob;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.Arrays;
 import java.util.Locale;
@@ -63,7 +62,7 @@ public class PrintFileController {
         stirling.software.common.model.MultipartFile file = request.getFileInput();
         String originalFilename = file.getOriginalFilename();
         if (originalFilename != null
-                && (originalFilename.contains("..") || Paths.get(originalFilename).isAbsolute())) {
+                && (originalFilename.contains("..") || Path.of(originalFilename).isAbsolute())) {
             throw ExceptionUtils.createIllegalArgumentException(
                     "error.invalid.filepath", "Invalid file path detected: " + originalFilename);
         }
