@@ -6,7 +6,6 @@ import java.net.HttpURLConnection;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.*;
 import java.util.regex.Pattern;
@@ -51,7 +50,7 @@ public class UIDataTessdataController {
         TessdataLanguagesResponse response = new TessdataLanguagesResponse();
         response.setInstalled(getAvailableTesseractLanguages());
         response.setAvailable(getRemoteTessdataLanguages());
-        response.setWritable(isWritableDirectory(Paths.get(runtimePathConfig.getTessDataPath())));
+        response.setWritable(isWritableDirectory(Path.of(runtimePathConfig.getTessDataPath())));
         return Response.ok(response).build();
     }
 
@@ -66,7 +65,7 @@ public class UIDataTessdataController {
                     .build();
         }
 
-        Path tessdataDir = Paths.get(runtimePathConfig.getTessDataPath());
+        Path tessdataDir = Path.of(runtimePathConfig.getTessDataPath());
         try {
             Files.createDirectories(tessdataDir);
         } catch (IOException e) {
