@@ -15,7 +15,6 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import io.quarkus.security.identity.SecurityIdentity;
 
@@ -379,7 +378,7 @@ public class FileStorageService {
         return files.stream()
                 .sorted(Comparator.comparing(StoredFile::getCreatedAt).reversed())
                 .map(file -> buildResponse(file, user, roleByFileId.get(file.getId())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public StoredFileResponse getAccessibleFileResponse(User user, Long fileId) {
@@ -418,7 +417,7 @@ public class FileStorageService {
                                 .filter(Objects::nonNull)
                                 .map(User::getUsername)
                                 .sorted(String.CASE_INSENSITIVE_ORDER)
-                                .collect(Collectors.toList())
+                                .toList()
                         : List.of();
         List<ShareLinkResponse> shareLinks =
                 ownedByCurrentUser && isShareLinksEnabled()
@@ -437,7 +436,7 @@ public class FileStorageService {
                                                         .expiresAt(share.getExpiresAt())
                                                         .build())
                                 .sorted(Comparator.comparing(ShareLinkResponse::getCreatedAt))
-                                .collect(Collectors.toList())
+                                .toList()
                         : List.of();
         List<SharedUserResponse> sharedUsers =
                 ownedByCurrentUser
@@ -458,7 +457,7 @@ public class FileStorageService {
                                         Comparator.comparing(
                                                 SharedUserResponse::getUsername,
                                                 String.CASE_INSENSITIVE_ORDER))
-                                .collect(Collectors.toList())
+                                .toList()
                         : List.of();
         return StoredFileResponse.builder()
                 .id(file.getId())
@@ -789,7 +788,7 @@ public class FileStorageService {
                                         .accessType(access.getAccessType().name())
                                         .accessedAt(access.getAccessedAt())
                                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<FileShareAccess> listAccessedShareLinks(User user) {
@@ -845,7 +844,7 @@ public class FileStorageService {
                                     .build();
                         })
                 .filter(response -> response.getShareToken() != null)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void ensureSharingEnabled() {
@@ -1032,7 +1031,7 @@ public class FileStorageService {
                         file.getHistoryStorageKey(),
                         file.getAuditLogStorageKey())
                 .filter(value -> value != null && !value.isBlank())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void cleanupStoredObject(StoredObject storedObject) {
